--- a/.env
+++ b/.env
@@ -2,16 +2,16 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:naU2VQEewMYsDRrHekgCSU7S3vfGaq/jns8KMQvCFjA=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_PORT=8889
 DB_DATABASE=bouzid_project
 DB_USERNAME=root
-DB_PASSWORD=ouail
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
